--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.sparetimelabs</groupId>
+            <groupId>com.github.purejavacomm</groupId>
             <artifactId>purejavacomm</artifactId>
-            <version>0.0.17</version>
+            <version>1.0.2.RELEASE</version>
         </dependency>
     </dependencies>
 
@@ -105,4 +105,16 @@
             </build>
         </profile>
     </profiles>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>libs-snapshots</name>
+            <url>http://nvs0336:8081/artifactory/libs-snapshots-local</url>
+        </snapshotRepository>
+        <repository>
+            <id>releases</id>
+            <name>libs-releases</name>
+            <url>http://nvs0336:8081/artifactory/libs-releases-local</url>
+        </repository>
+    </distributionManagement>
 </project>
