--- a/pom.xml
+++ b/pom.xml
@@ -106,15 +106,10 @@
         </profile>
     </profiles>
     <distributionManagement>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>libs-snapshots</name>
-            <url>http://nvs0336:8081/artifactory/libs-snapshots-local</url>
-        </snapshotRepository>
         <repository>
-            <id>releases</id>
-            <name>libs-releases</name>
-            <url>http://nvs0336:8081/artifactory/libs-releases-local</url>
+            <id>jlibudev</id>
+            <name>Renos Maven Repository server</name>
+            <url>https://maven.pkg.github.com/nedap/jlibudev</url>
         </repository>
     </distributionManagement>
 </project>
